Fixed uneven margin around course image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1555,6 +1555,8 @@ section {
 #coursename .coursename-img img {
     border-radius: 20px;
     border: 5px solid #FFF;
+    width: 90%; 
+    margin-bottom: 19px;
 }
 
 
